--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
 <!--
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- -->
+* Licensed to the Apache Software Foundation (ASF) under one
+* or more contributor license agreements.  See the NOTICE file
+* distributed with this work for additional information
+* regarding copyright ownership.  The ASF licenses this file
+* to you under the Apache License, Version 2.0 (the
+* "License"); you may not use this file except in compliance
+* with the License.  You may obtain a copy of the License at
+*
+*     http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+-->
 
 <div class="navigation" [class.open]="isNavOpen">
   <div class="logo">
@@ -27,41 +27,55 @@
     <li routerLinkActive="active">
       <a routerLink="/dashboard">
         <i class="fa fa-th-large text-center"></i>
-        <span *ngIf="isNavOpen">Dashboard</span>
+        @if (isNavOpen) {
+          <span>Dashboard</span>
+        }
       </a>
     </li>
     <li routerLinkActive="active">
       <a routerLink="/queues">
         <i class="fa fa-sitemap text-center" style="width: 16px"></i>
-        <span *ngIf="isNavOpen">Queues</span>
+        @if (isNavOpen) {
+          <span>Queues</span>
+        }
       </a>
     </li>
     <li routerLinkActive="active">
       <a routerLink="/queues-v2">
         <i class="fa fa-sitemap" style="width: 16px"></i>
-        <span *ngIf="isNavOpen">Queues V2</span>
-        <div class="beta-tag text-center" *ngIf="isNavOpen">
-          <i class="fa fa-flask"></i>
-          Beta
-        </div> 
+        @if (isNavOpen) {
+          <span>Queues V2</span>
+        }
+        @if (isNavOpen) {
+          <div class="beta-tag text-center">
+            <i class="fa fa-flask"></i>
+            Beta
+          </div>
+        }
       </a>
     </li>
     <li routerLinkActive="active">
       <a routerLink="/applications">
         <i class="fa fa-indent text-center"></i>
-        <span *ngIf="isNavOpen">Applications</span>
+        @if (isNavOpen) {
+          <span>Applications</span>
+        }
       </a>
     </li>
     <li routerLinkActive="active">
       <a routerLink="/nodes">
         <i class="fa fa-server text-center"></i>
-        <span *ngIf="isNavOpen">Nodes</span>
+        @if (isNavOpen) {
+          <span>Nodes</span>
+        }
       </a>
     </li>
     <li routerLinkActive="active">
       <a routerLink="/status">
         <i class="fa fa-thermometer-full text-center"></i>
-        <span *ngIf="isNavOpen">Status</span>
+        @if (isNavOpen) {
+          <span>Status</span>
+        }
       </a>
     </li>
   </ul>
@@ -75,9 +89,11 @@
     <div class="header">
       <div class="breadcrumb-wrapper">
         <ul class="breadcrumb">
-          <li *ngFor="let crumb of breadcrumbs">
-            <a href="#" [routerLink]="[crumb.url]">{{ crumb.label }}</a>
-          </li>
+          @for (crumb of breadcrumbs; track crumb) {
+            <li>
+              <a href="#" [routerLink]="[crumb.url]">{{ crumb.label }}</a>
+            </li>
+          }
         </ul>
         <div class="help-menu">
           <button
@@ -87,7 +103,7 @@
             matTooltipShowDelay="500"
             [matMenuTriggerFor]="helpMenu"
           >
-            <img src="../assets/images/config.svg">
+            <img src="../assets/images/config.svg" />
           </button>
           <mat-menu #helpMenu="matMenu" xPosition="before">
             <button mat-menu-item (click)="openYuniKornHelp('/')">Apache YuniKorn</button>
@@ -98,9 +114,7 @@
             <button mat-menu-item (click)="openYuniKornHelp('/community/get_involved')">
               Get Involved
             </button>
-            <button mat-menu-item (click)="openYuniKornLicense()">
-              License Information
-            </button>
+            <button mat-menu-item (click)="openYuniKornLicense()">License Information</button>
           </mat-menu>
         </div>
       </div>
