--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -1,20 +1,20 @@
 <!--
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- -->
+* Licensed to the Apache Software Foundation (ASF) under one
+* or more contributor license agreements.  See the NOTICE file
+* distributed with this work for additional information
+* regarding copyright ownership.  The ASF licenses this file
+* to you under the Apache License, Version 2.0 (the
+* "License"); you may not use this file except in compliance
+* with the License.  You may obtain a copy of the License at
+*
+*     http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+-->
 
 <div class="top-part">
   <div class="dropdown-wrapper">
@@ -24,9 +24,11 @@
         [(value)]="partitionSelected"
         (selectionChange)="onPartitionSelectionChanged($event)"
       >
-        <mat-option *ngFor="let part of partitionList" [value]="part.value">
-          {{ part.name }}
-        </mat-option>
+        @for (part of partitionList; track part) {
+          <mat-option [value]="part.value">
+            {{ part.name }}
+          </mat-option>
+        }
       </mat-select>
     </mat-form-field>
   </div>
@@ -34,75 +36,96 @@
   <div class="right-wrapper">
     <div class="filter">
       <mat-form-field>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input />
       </mat-form-field>
     </div>
-    
+
     <div class="btn-wrapper">
-      <button class="btn" (click)="toggle()" [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'">
-        <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54' ">more_horiz</i>
+      <button
+        class="btn"
+        (click)="toggle()"
+        [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'"
+      >
+        <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54'"
+          >more_horiz</i
+        >
       </button>
     </div>
   </div>
-  
 </div>
 <div class="nodes-view">
   <div class="mat-elevation-z8">
     <mat-table [dataSource]="nodeDataSource" matSort #nodeSort="matSort">
-      <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of nodeColumnDef">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
-
-        <ng-container
-          *ngIf="
-            ['capacity', 'occupied', 'allocated', 'available', 'utilized'].includes(columnDef.colId);
-            else renderNext_1
-          "
-        >
-          <mat-cell *matCellDef="let element">
-            <ng-container *ngIf="columnDef.colFormatter; else showNodeRawData">
-              <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+      @for (columnDef of nodeColumnDef; track columnDef) {
+        <ng-container [matColumnDef]="columnDef.colId">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>{{
+            columnDef.colName
+          }}</mat-header-cell>
+          @if (
+            ['capacity', 'occupied', 'allocated', 'available', 'utilized'].includes(columnDef.colId)
+          ) {
+            <mat-cell *matCellDef="let element">
+              @if (columnDef.colFormatter) {
+                @if (columnDef.colFormatter(element[columnDef.colId]); as colValue) {
                   <ul class="mat-res-ul">
-                    <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                      <li class="mat-res-li" *ngIf="i<2" 
-                          [innerHTML]="resource | highlightSearch: filterValue"></li>
-                      <li class="mat-res-li" *ngIf="i>=2 && detailToggle"
-                          [innerHTML]="resource | highlightSearch: filterValue"></li>
-                    </ng-container>
+                    @for (resource of formatResources(colValue); track resource; let i = $index) {
+                      @if (i < 2) {
+                        <li
+                          class="mat-res-li"
+                          [innerHTML]="resource | highlightSearch: filterValue"
+                        ></li>
+                      }
+                      @if (i >= 2 && detailToggle) {
+                        <li
+                          class="mat-res-li"
+                          [innerHTML]="resource | highlightSearch: filterValue"
+                        ></li>
+                      }
+                    }
                   </ul>
-              </ng-container>
-            </ng-container>
-            <ng-template #showNodeRawData>
-              <span [innerHTML]="element[columnDef.colId] | highlightSearch: filterValue"></span>
-            </ng-template>
-          </mat-cell>
-        </ng-container>
-
-        <ng-template #renderNext_1>
-            
-            <ng-container *ngIf="columnDef.colId!=='attributes'">
+                }
+              } @else {
+                <span [innerHTML]="element[columnDef.colId] | highlightSearch: filterValue"></span>
+              }
+            </mat-cell>
+          } @else {
+            @if (columnDef.colId !== 'attributes') {
               <mat-cell *matCellDef="let element">
-                <span [innerHTML]="element[columnDef.colId] || 'n/a' | highlightSearch: filterValue"></span>
+                <span
+                  [innerHTML]="element[columnDef.colId] || 'n/a' | highlightSearch: filterValue"
+                ></span>
               </mat-cell>
-            </ng-container>
-            
-            <ng-container *ngIf="columnDef.colId=='attributes'">
+            }
+            @if (columnDef.colId == 'attributes') {
               <mat-cell *matCellDef="let element" class="mat-attr">
                 <ul class="mat-attr-ul">
-                  <ng-container *ngFor="let attribute of formatAttribute(element[columnDef.colId]); let i = index">
-                    <li class="mat-attr-li" [innerHTML]="attribute | highlightSearch: filterValue"></li>
-                  </ng-container>      
+                  @for (
+                    attribute of formatAttribute(element[columnDef.colId]);
+                    track attribute;
+                    let i = $index
+                  ) {
+                    <li
+                      class="mat-attr-li"
+                      [innerHTML]="attribute | highlightSearch: filterValue"
+                    ></li>
+                  }
                 </ul>
               </mat-cell>
-            </ng-container>
-        </ng-template>
-      </ng-container>
+            }
+          }
+        </ng-container>
+      }
 
       <ng-container matColumnDef="indicatorIcon">
         <mat-header-cell *matHeaderCellDef class="indicator-icon"></mat-header-cell>
         <mat-cell *matCellDef="let element" class="indicator-icon">
           <span>
-            <i class="fas fa-plus-circle" *ngIf="!element.isSelected"></i>
-            <i class="fas fa-minus-circle" *ngIf="element.isSelected"></i>
+            @if (!element.isSelected) {
+              <i class="fas fa-plus-circle"></i>
+            }
+            @if (element.isSelected) {
+              <i class="fas fa-minus-circle"></i>
+            }
           </span>
         </mat-cell>
       </ng-container>
@@ -142,35 +165,39 @@
 
     <div class="mat-elevation-z8">
       <mat-table [dataSource]="allocDataSource" matSort #allocSort="matSort">
-        <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of allocColumnDef">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
-
-          <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_2">
-            <mat-cell *matCellDef="let element">
-              <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData">
-                <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+        @for (columnDef of allocColumnDef; track columnDef) {
+          <ng-container [matColumnDef]="columnDef.colId">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>{{
+              columnDef.colName
+            }}</mat-header-cell>
+            @if (columnDef.colId === 'resource') {
+              <mat-cell *matCellDef="let element">
+                @if (columnDef.colFormatter) {
+                  @if (columnDef.colFormatter(element[columnDef.colId]); as colValue) {
                     <ul class="mat-res-ul">
-                      <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                        <li class="mat-res-li" *ngIf="i<2">
-                          {{resource}}
-                        </li>
-                        <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
-                          {{resource}}
-                        </li>
-                      </ng-container>
+                      @for (resource of formatResources(colValue); track resource; let i = $index) {
+                        @if (i < 2) {
+                          <li class="mat-res-li">
+                            {{ resource }}
+                          </li>
+                        }
+                        @if (i >= 2 && detailToggle) {
+                          <li class="mat-res-li">
+                            {{ resource }}
+                          </li>
+                        }
+                      }
                     </ul>
-                </ng-container>
-            </ng-container>
-              <ng-template #showAllocRowData>
-                <span>{{ element[columnDef.colId] }}</span>
-              </ng-template>
-            </mat-cell>
+                  }
+                } @else {
+                  <span>{{ element[columnDef.colId] }}</span>
+                }
+              </mat-cell>
+            } @else {
+              <mat-cell *matCellDef="let element">{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
+            }
           </ng-container>
-
-          <ng-template #renderNext_2>
-            <mat-cell *matCellDef="let element">{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
-          </ng-template>
-        </ng-container>
+        }
 
         <ng-container matColumnDef="noRecord">
           <mat-footer-cell *matFooterCellDef>
